# py_anime_list_sync

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/py_anime_list_sync/: __init__.py  cli.py
src/py_anime_list_sync/commands/: authentication_group.py  dummy_group.py  library_group.py
src/py_anime_list_sync/logic/: authentication.py  list_management.py  mal_authentication.py  mal_logic.py
src/py_anime_list_sync/utils/: console.py  constants.py  helpers.py  mal_helpers.py  mal_models.py  models.py
tests/: __init__.py  test_py_anime_list_sync.py
