[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_alsync"
version = "0.0.1"
description = "Sync anime lists between different services."
readme = "README.rst"
authors = [
  {name = "Enoch Adesanya", email = "adesanyaenoch@proton.me"}
]
maintainers = [
  {name = "Enoch Adesanya", email = "adesanyaenoch@proton.me"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
    "click >= 8.1.3",
    "rich>=13.9.4"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Enoch02/py_anime_list_sync/issues"
changelog = "https://github.com/Enoch02/py_anime_list_sync/blob/master/changelog.md"
homepage = "https://github.com/Enoch02/py_anime_list_sync"

[project.scripts]
py_alsync = "py_anime_list_sync.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

